Fixed desktop modal spacing

--- a/server/public/layout.css
+++ b/server/public/layout.css
@@ -304,7 +304,7 @@ ul {
   .price-date-time-container {
     display: flex;
     justify-content: space-between;
-    margin-top: 1rem;
+    margin-top: 0;
     margin-bottom: 1rem;
   }
 
